--- a/docs/TODO.txt
+++ b/docs/TODO.txt
@@ -1,5 +1,9 @@
 Dla chętnych do pracy:
-- do wymyślenia sposób, w który będziemy obsługiwać moduły aplikacji
+- Dodać szablony klas aplikacji
+	Każda tabela w bazie danych będzie miała swoją reprezentację w postaci klasy-modelu i klasy-repozytorium
+	Np. dla tabeli Elem w katalogu app tworzymy klasę Elem w pliku Elem.php i klasę ElemRepo w pliku ElemRepo.php
+	Klasa Elem dziedziczy wtedy po klasie Model (class Elem extends Model), w podobny sposób ElemRepo dziedziczy po Repo
+- Do wymyślenia sposób, w który będziemy obsługiwać moduły aplikacji
 	czysto teoretyczne zagadnienie
 	rozpisanie tego w sposób zrozumiały dla reszty zespołu przy założeniu, że poddamy to w dyskusję i ustalimy wspólny kierunek
 	przyda się do API dla mobilnej aplikacji
@@ -21,4 +25,11 @@ Dla chętnych do pracy:
 	wymyślić jak wyświetlić błąd (np 404) jeżeli mamy już coś w buforze
 - Rozpisać schemat bazy danych w MySQL-u
 	samo tworzenie tabel, bez danych
+- Wymyślić i rozpisać (w jakimś pliku) wstępną hierarchię podstron
+	czyli gdzie panel usera, gdzie wyświetlamy listę zadań, jak konwersacje, itd.
 
+
+OPCJONALNIE (na później, dla ambitnych):
+- System generowania cache dla całego projektu
+	zapisywanie hierarchii klas, kolejności ich ładowania
+	cache w bazie danych, wyświetlanie wcześniej wygenerowanych danych
